--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+cd /noether/s0/dxb5775/pm7calculator
+
+# Remove the problematic file
+rm pyproject.toml
+
+# Create a new, correctly formatted pyproject.toml
 cat > pyproject.toml << 'EOF'
 [build-system]
 requires = ["setuptools>=45", "wheel"]
@@ -5,18 +11,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pm7calculator"
-dynamic = ["version"]
+version = "1.0.0"
 description = "Comprehensive PM7 quantum chemistry calculator for molecular property prediction"
 readme = "README.md"
-license = {file = "LICENSE"}
 authors = [
-    {name = "bhattadeb34", email = "bhattadeb34@psu.edu"},
+    {name = "bhattadeb34", email = "bhattadeb34@psu.edu"}
 ]
+license = {file = "LICENSE"}
 keywords = [
-    "quantum chemistry", 
+    "quantum chemistry",
     "PM7", 
-    "MOPAC", 
-    "molecular properties", 
+    "MOPAC",
+    "molecular properties",
     "computational chemistry",
     "drug discovery",
     "materials science"
@@ -31,14 +37,14 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Topic :: Scientific/Engineering :: Chemistry",
+    "Topic :: Scientific/Engineering :: Chemistry"
 ]
 requires-python = ">=3.7"
 dependencies = [
     "numpy>=1.19.0",
     "pandas>=1.3.0",
     "rdkit-pypi>=2021.9.1",
-    "ase>=3.20.0",
+    "ase>=3.20.0"
 ]
 
 [project.optional-dependencies]
